force-app/main/default/objects/rstk__iclocitem__c/fields/Days_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Last_Activity__c</fullName>
    <formula>NOW() -   LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Last Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>