force-app/main/default/objects/rstk__iclocitem__c/fields/FMG_Lot_Reference__c.field-meta.xml
<CustomField>
    <fullName>FMG_Lot_Reference__c</fullName>
    <formula>rstk__iclocitem_icitemlot__r.rstk__icitemlot_lotref__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FMG Lot Reference</label>
    <type>Text</type>
</CustomField>