force-app/main/default/objects/rstk__iclocitem__c/fields/INC_Inv_Com_Code__c.field-meta.xml
<CustomField>
    <fullName>INC_Inv_Com_Code__c</fullName>
    <description>Inventory Commodity Code</description>
    <formula>rstk__iclocitem_icitem__r.rstk__icitem_iccomcod__r.rstk__iccomcod_comcod__c</formula>
    <inlineHelpText>Inventory Commodity Code</inlineHelpText>
    <label>Inv Com Code</label>
    <type>Text</type>
</CustomField>