force-app/main/default/objects/rstk__iclocitem__c/listViews/Inventory_by_Location_90.listView-meta.xml
<ListView>
    <fullName>Inventory_by_Location_90</fullName>
    <columns>NAME</columns>
    <columns>rstk__iclocitem_icitem__c</columns>
    <columns>rstk__iclocitem_locid__c</columns>
    <columns>rstk__iclocitem_loctype_pl__c</columns>
    <columns>rstk__iclocitem_locnum__c</columns>
    <columns>rstk__iclocitem_locqty__c</columns>
    <columns>rstk__iclocitem_invuom__c</columns>
    <columns>rstk__iclocitem_comments__c</columns>
    <columns>rstk__iclocitem_locsec__c</columns>
    <columns>FMG_Lot_Reference__c</columns>
    <columns>Days_Last_Activity__c</columns>
    <columns>rstk__iclocitem_expiredate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__iclocitem_locid__c</field>
        <operation>contains</operation>
        <value>90</value>
    </filters>
    <label>Inventory by Location (90)</label>
</ListView>