force-app/main/default/objects/rstk__iclocitem__c/listViews/Manufactured_Temp_Items_MRP_Only.listView-meta.xml
<ListView>
    <fullName>Manufactured_Temp_Items_MRP_Only</fullName>
    <columns>NAME</columns>
    <columns>rstk__iclocitem_locqty__c</columns>
    <columns>rstk__iclocitem_locid__c</columns>
    <columns>rstk__iclocitem_locnum__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__iclocitem_icitem__c</field>
        <operation>contains</operation>
        <value>-MF</value>
    </filters>
    <filters>
        <field>rstk__iclocitem_locqty__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>API SYS</value>
    </filters>
    <label>Manufactured Temp Items - MRP Only</label>
</ListView>