force-app/main/default/objects/rstk__iclocitem__c/listViews/Manufactured_Temp_Items_Non_MRP.listView-meta.xml
<ListView>
    <fullName>Manufactured_Temp_Items_Non_MRP</fullName>
    <columns>NAME</columns>
    <columns>rstk__iclocitem_locqty__c</columns>
    <columns>rstk__iclocitem_locid__c</columns>
    <columns>rstk__iclocitem_locnum__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__iclocitem_icitem__c</field>
        <operation>contains</operation>
        <value>-MF</value>
    </filters>
    <filters>
        <field>rstk__iclocitem_locqty__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notEqual</operation>
        <value>API SYS</value>
    </filters>
    <label>Manufactured Temp Items - Non MRP</label>
</ListView>