force-app/main/default/objects/rstk__iclocitem__c/listViews/Special_Opp_Inventory_by_Location.listView-meta.xml
<ListView>
    <fullName>Special_Opp_Inventory_by_Location</fullName>
    <columns>NAME</columns>
    <columns>rootstock__Item__c</columns>
    <columns>rstk__iclocitem_locid__c</columns>
    <columns>rstk__iclocitem_loctype_pl__c</columns>
    <columns>rstk__iclocitem_locnum__c</columns>
    <columns>rstk__iclocitem_locqty__c</columns>
    <columns>rstk__iclocitem_availind__c</columns>
    <columns>rstk__iclocitem_comments__c</columns>
    <columns>rstk__iclocitem_lastcountdate__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>rstk__iclocitem_locsec__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>rstk__iclocitem_locnum__c</field>
        <operation>contains</operation>
        <value>Special1</value>
    </filters>
    <filters>
        <field>rstk__iclocitem_locqty__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Special Opp Inventory by Location</label>
    <sharedTo>
        <group>Product_Management_Team</group>
    </sharedTo>
</ListView>